tests/models/struct/unnamed/u16/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2.0)]
    u16
);
fn main() {}
